WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86577
Fix Qt5/Mac build after
r117212
by adding missing NETSCAPE_PLUGIN_API guards
https://bugs.webkit.org/show_bug.cgi?id=86577
Summary
Fix Qt5/Mac build after r117212 by adding missing NETSCAPE_PLUGIN_API guards
Caio Marcelo de Oliveira Filho
Reported
2012-05-15 22:44:22 PDT
Fix Qt5/Mac build after
r117212
by adding missing NETSCAPE_PLUGIN_API guards
Attachments
Patch
(3.05 KB, patch)
2012-05-15 22:45 PDT
,
Caio Marcelo de Oliveira Filho
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Caio Marcelo de Oliveira Filho
Comment 1
2012-05-15 22:45:19 PDT
Created
attachment 142151
[details]
Patch
Andy Estes
Comment 2
2012-05-15 22:48:32 PDT
Comment on
attachment 142151
[details]
Patch r=me
WebKit Review Bot
Comment 3
2012-05-15 23:23:40 PDT
Comment on
attachment 142151
[details]
Patch Clearing flags on attachment: 142151 Committed
r117222
: <
http://trac.webkit.org/changeset/117222
>
WebKit Review Bot
Comment 4
2012-05-15 23:23:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug