Fix Qt5/Mac build after r117212 by adding missing NETSCAPE_PLUGIN_API guards https://bugs.webkit.org/show_bug.cgi?id=86577

Reviewed by Andy Estes.

* Shared/Plugins/Netscape/NetscapePluginModuleNone.cpp:
* UIProcess/Plugins/unix/PluginInfoStoreUnix.cpp:
(WebKit::PluginInfoStore::getPluginInfo):
* WebProcess/Plugins/Netscape/NetscapePluginNone.cpp:


Canonical link: https://commits.webkit.org/104156@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117222 268f45cc-cd09-0410-ab3c-d52691b4dbfc