Source/WebKit2/Shared/Plugins/Netscape/NetscapePluginModuleNone.cpp
@@ -25,7 +25,7 @@
  */
 
 #include "config.h"
-#if PLUGIN_ARCHITECTURE(UNSUPPORTED)
+#if ENABLE(NETSCAPE_PLUGIN_API) && PLUGIN_ARCHITECTURE(UNSUPPORTED)
 
 #include "NetscapePluginModule.h"
 
