Source/WebKit2/UIProcess/Plugins/unix/PluginInfoStoreUnix.cpp
@@ -95,7 +95,13 @@ Vector<String> PluginInfoStore::individualPluginPaths()
 
 bool PluginInfoStore::getPluginInfo(const String& pluginPath, PluginModuleInfo& plugin)
 {
+#if ENABLE(NETSCAPE_PLUGIN_API)
     return NetscapePluginModule::getPluginInfo(pluginPath, plugin);
+#else
+    UNUSED_PARAM(pluginPath);
+    UNUSED_PARAM(plugin);
+    return false;
+#endif
 }
 
 bool PluginInfoStore::shouldUsePlugin(Vector<PluginModuleInfo>& alreadyLoadedPlugins, const PluginModuleInfo& plugin)
