Source/WebKit2/WebProcess/Plugins/Netscape/NetscapePluginNone.cpp
@@ -25,7 +25,7 @@
  */
 
 #include "config.h"
-#if PLUGIN_ARCHITECTURE(UNSUPPORTED)
+#if ENABLE(NETSCAPE_PLUGIN_API) && PLUGIN_ARCHITECTURE(UNSUPPORTED)
 
 #include "NetscapePlugin.h"
 
@@ -95,4 +95,4 @@ bool NetscapePlugin::wantsPluginRelativeNPWindowCoordinates()
 
 } // namespace WebKit
 
-#endif // PLUGIN_ARCHITECTURE(UNSUPPORTED)
+#endif // ENABLE(NETSCAPE_PLUGIN_API) && PLUGIN_ARCHITECTURE(UNSUPPORTED)
